# db-test-rs

./: Cargo.toml  coffee.db
migrations/: 20241018180128_add-coffee-icon.sql  20241019101408_remove-name-and-add-roastery.sql
src/: db.rs  main.rs  rpissc.rs  service.rs
