[package]
name = "db-test-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nanoid = "0.4.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
sqlx = { version = "0.8.2", features = ["json", "runtime-tokio", "sqlite"] }
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.89"
rand = "0.8.5"


[profile.dev.package.sqlx-macros]
opt-level = 3
